--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
     "manifest_version": 2,
     "name": "Word Changer",
-    "description": "Make hilarious content by swapping the text on your favorite websites.",
+    "description": "Make hilarious changes to your favorite websites by swapping the text using this simple extension.",
     "version": "1.0",
     "browser_action": {
         "default_popup": "index.html",
-        "default_title": "Word Changer"
+        "default_title": "Word Changer",
+        "default_icon": "art/WordChangerLogo.png"
     },
     "content_scripts": [
         {
@@ -14,7 +15,7 @@
             ],
             "all_frames": true,
             "js": [
-                "main.js"
+                "scripts/main.js"
             ]
         }
     ],
